--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Loja Virtual</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <link rel="stylesheet" href="css/style.css">
-        <script defer src="script.js"></script>
-    </head>
-    <body>
-        <header>
-        <div class="Container">
-        <div class="logo">
-            <img class="logo-chist" src="css/logo.jpg" alt="hal 9000" ></img>
-        </div>
+<head>
+    <title>Loja Virtual</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/script.js"></script>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img class="logo-chist" src="css/logo.jpg" alt="hal 9000">
+            </div>
         </div>
         <nav>
             <ul>
-                <li><a href="#"> Todos </a></li>
-                <li><a href="#"> Acessórios </a></li>
-                <li><a href="#"> Tenis </a></li>
-                <li><a href="#">  Saltos </a></li>
+                <li><a href="#">Todos</a></li>
+                <li><a href="#">Acessórios</a></li>
+                <li><a href="#">Tênis</a></li>
+                <li><a href="#">Saltos</a></li>
             </ul>
+            <div class="search-bar">
+                <input type="text" id="search-input" placeholder="Pesquisar..." oninput="pesquisarProdutos()">
+                <button id="search-button">Pesquisar</button>
+            </div>
         </nav>
     </header>
     <main>
-        <body>
-            <div id="product-list"></div>
+        <div class="cart-container">
             <div id="cart">
                 <h2>Carrinho de Compras</h2>
-                <p id="cart-list"></p>
+                <ul id="cart-list"></ul>
+                <div>
+                <p id="total">Total: R$ 0,00</p>
+                <p id="quantity">Quantidade de Produtos: 0</p>
+                </div>
             </div>
-
-            </aside>
-    </body>
-</main>
+        </div>
+        <div id="product-list"></div>
+    </main>
+</body>
 </html>
